Font adjustments since I'm still dumb with CSS

--- a/silk-brush/main.css
+++ b/silk-brush/main.css
@@ -1,7 +1,7 @@
 body {
     color:white;
     background-color:black;
-    font: "verdana";
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .main {
