--- a/main.css
+++ b/main.css
@@ -4,8 +4,17 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.header {
+    text-align: center;
+    width:100%;
+}
+
 .main {
     text-align: center;
+}
+
+#title {
+    font-size: 4em;
 }
 
 h3 {
